quick fix for z-index on nav

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -267,7 +267,8 @@ hr {
     width: 40rem;
     justify-content: space-between;
     align-items: center;
-    list-style: none; }
+    list-style: none;
+    z-index: 1; }
     @media screen and (max-width: 1280px) {
       .nav__container {
         display: none;
